# halcyon

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
Dockerfiles/: Dockerfile  Dockerfile.test
halcyon/: config.py  console.py
halcyon/infer/: download.py  infer.py  inferer.py
halcyon/ml/: .gitignore
halcyon/ml/input_data/: data_generator.py  data_generator_demo.py  fasta_fetcher.py
halcyon/ml/net/: base.py  cnn.py  encoder.py  hp_params.py  net_inference.py  net_train.py  saver.py  sub_net.py
halcyon/ml/net/decoder/: decoder.py  helper.py  inference_decoder.py  train_decoder.py
halcyon/models/: fast5.py  seq.py
integration_tests/: test_infer.py  utils.py
test_data/: DESKTOP_316HUU8_20180614_FAH70729_MN26128_sequencing_run_20180614_58538_read_270_ch_335_strand.fast5
