[tool.poetry]
name = "pyhalcyon"
packages = [
  {include = "halcyon"}
]
version = "0.1.0"
description = ""
authors = ["Hiroki Konishi <relastle@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
more-itertools = "==8.4.0"
logzero = "==1.5.0"
numpy = "<1.17"
tensorflow = "<1.15.0"
ujson = "==1.35"
h5py = "==2.10.0"
biopython = "==1.75"
click = "==7.1.2"
click-help-colors = "==0.8"
requests = "==2.24.0"

[tool.poetry.dev-dependencies]
pytest = "==6.0.1"
flake8 = "==3.8.3"
autopep8 = "==1.5.4"
pyflakes = "==2.2.0"
coverage = "==5.2.1"
isort = "==5.4.2"

[tool.poetry.scripts]
halcyon = 'halcyon.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
